<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BACKGROUND"
    tools:context=".Reg_screen">


    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="274dp"
        android:layout_height="53dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:gravity="center_horizontal"
        android:text="@string/Weight_l"
        android:textAlignment="center"
        android:textColor="@color/TEXT"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox5" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="275dp"
        android:layout_height="53dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:gravity="center_horizontal"
        android:text="@string/Weight_g"
        android:textAlignment="center"
        android:textColor="@color/TEXT"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/checkBox6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="164dp"
        android:layout_height="61dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/HINT"
        android:ems="10"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:hint="@string/reg_text_1"
        android:inputType="textPersonName"
        android:textColor="@color/TEXT"
        android:textColorHint="@color/HINT"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="198dp"
        android:layout_height="42dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:gravity="center_horizontal"
        android:text="@string/reg_text3"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/TEXT"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="152dp"
        android:layout_height="39dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:gravity="center_horizontal"
        android:text="@string/women"
        android:textAlignment="center"
        android:textColor="@color/TEXT"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/checkBox5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="103dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/HINT"
        android:ems="10"
        android:fontFamily="@font/montserrat_alternates_extrabold"
        android:gravity="center_horizontal"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/TEXT"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="13dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:gravity="center_horizontal"
        android:text="@string/reg_text5"
        android:textAlignment="center"
        android:textColor="@color/TEXT"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/checkBox2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="110dp"
        android:layout_height="56dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="7dp"
        android:backgroundTint="@color/HINT"
        android:ems="10"
        android:fontFamily="@font/montserrat_alternates_extrabold"
        android:gravity="center_horizontal"
        android:inputType="date"
        android:textAlignment="center"
        android:textColor="@color/TEXT"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="186dp"
        android:layout_height="44dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:gravity="center_horizontal"
        android:text="@string/reg_text4"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/TEXT"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="158dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/HINT"
        android:ems="10"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:gravity="center_horizontal"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/TEXT"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="165dp"
        android:layout_height="43dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:gravity="center_horizontal"
        android:text="@string/reg_text1"
        android:textAlignment="center"
        android:textColor="@color/TEXT"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="160dp"
        android:layout_height="44dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:gravity="center_horizontal"
        android:text="@string/reg_text2"
        android:textAlignment="center"
        android:textColor="@color/TEXT"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <Button
        android:id="@+id/button_reg"
        android:layout_width="314dp"
        android:layout_height="57dp"
        android:layout_marginStart="40dp"

        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="80dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:gravity="center_horizontal"
        android:text="@string/registrat"
        android:textAlignment="center"
        android:textColor="@color/BACKGROUND"
        android:textSize="24sp"
        app:backgroundTint="@color/TEXT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="124dp"
        android:layout_height="37dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:gravity="center_horizontal"
        android:text="@string/men"
        android:textAlignment="center"
        android:textColor="@color/TEXT"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/checkBox5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:text="     "
        android:textColor="@color/ERROR"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/button_reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox6" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="400dp"
        android:layout_height="70dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/montserrat_alternates_extrabold"
        android:gravity="center_horizontal"
        android:text="@string/registrat_l"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColor="@color/TEXT"
        android:textSize="52sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>