<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BACKGROUND"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Start_text"
        android:layout_width="378dp"
        android:layout_height="119dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/montserrat_alternates_extrabold"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColor="@color/TEXT"
        android:textSize="80sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="368dp"
        android:layout_height="38dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/montserrat_alternates_extrabold"
        android:gravity="center_horizontal"
        android:text="@string/F_text2"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColor="@color/TEXT"
        android:textSize="24sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Start_text" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="329dp"
        android:layout_height="54dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="130dp"
        android:fontFamily="@font/montserrat_alternates_extrabold"
        android:gravity="center_horizontal"
        android:text="@string/F_text4"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColor="#000000"
        android:textSize="30sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:gravity="center_horizontal"
        android:text="@string/F_text3"
        android:textAlignment="center"
        android:textColor="#917270"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/main_button"
        android:layout_width="241dp"
        android:layout_height="55dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="180dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:text="@string/F_b_text4"
        android:textColor="@color/BACKGROUND"
        android:textSize="24sp"
        app:backgroundTint="@color/TEXT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0"
        app:rippleColor="#8A8181" />
</androidx.constraintlayout.widget.ConstraintLayout>