<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BACKGROUND"
    tools:context=".App_screen">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:fontFamily="@font/montserrat_alternates_extrabold"
        android:gravity="center_horizontal"
        android:text="@string/The_remaining_s"
        android:textAlignment="center"
        android:textColor="@color/TEXT"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/textView17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="70dp"
        android:fontFamily="@font/montserrat_alternates_extrabold"
        android:gravity="center_horizontal"
        android:text="@string/Fats_s"
        android:textAlignment="center"
        android:textColor="@color/TEXT"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="88dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="54dp"
        android:fontFamily="@font/montserrat_alternates_extrabold"
        android:gravity="center_horizontal"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/TEXT"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/textView23"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="90dp"
        android:layout_height="41dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/montserrat_alternates_extrabold"
        android:gravity="center_horizontal"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/TEXT"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/textView22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="155dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/montserrat_alternates_extrabold"
        android:gravity="center_horizontal"
        android:text="@string/Squirrels_s"
        android:textAlignment="center"
        android:textColor="@color/TEXT"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="139dp"
        android:layout_height="43dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/montserrat_alternates_extrabold"
        android:gravity="center_horizontal"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/TEXT"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/textView20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="107dp"
        android:layout_height="50dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="35dp"
        android:fontFamily="@font/montserrat_alternates_extrabold"
        android:gravity="center_horizontal"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/TEXT"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/montserrat_alternates_extrabold"
        android:gravity="center_horizontal"
        android:text="@string/Calories_s"
        android:textAlignment="center"
        android:textColor="@color/TEXT"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="249dp"
        android:layout_height="46dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/montserrat_alternates_extrabold"
        android:gravity="center_horizontal"
        android:text="@string/Carbohydrates_s"
        android:textAlignment="center"
        android:textColor="@color/TEXT"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/montserrat_alternates_extrabold"
        android:gravity="center_horizontal"
        android:text="@string/Daily_rate_s"
        android:textAlignment="center"
        android:textColor="@color/TEXT"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/textView15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="164dp"
        android:layout_height="79dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/montserrat_alternates_extrabold"
        android:text="@string/Changenorm_s"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <Button
        android:id="@+id/button3"
        android:layout_width="164dp"
        android:layout_height="79dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/montserrat_alternates_extrabold"
        android:text="@string/Addproduct_s"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

</androidx.constraintlayout.widget.ConstraintLayout>